--- a/about.html
+++ b/about.html
@@ -10,7 +10,6 @@
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" 
           crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="shortcut icon" href="Assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
@@ -61,7 +60,7 @@
 
   <section class="about about-1">
     <div class="container">
-      <h1>Who we are</h1>
+      <h1 class="mt-5">Who we are</h1>
       <div class="flex-row">
           <div class="lefthand-1">
             <p>Stone cold is Europe’s leading indigenous logistics company powered by technology with a solid reputation for e-commerce/social commerce-tailored logistics. </p>
@@ -76,7 +75,7 @@
          </div>
           </div>
           <div class="righthand-1">
-             <img src="Assets/SVG/Fire_truck.svg" alt="">
+             <img src="Assets/img/delivery Man.jpg" alt="">
           </div>
       </div>
     </div>
@@ -220,7 +219,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
     <script src="app.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://kit.fontawesome.com/18919f69fb.js" crossorigin="anonymous"></script>
 </body>
 </html>
