--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
            With deep knowledge of the local terrain, Stone cold courier has the scale and experience to deliver superior results consistently. </p> 
         </div>
         <div class="righthand-1">
-           <img src="Assets/SVG/Traslocatore02.svg" alt="">
+           <img src="Assets/img/delivery Man.jpg" alt="">
         </div>
     </div>
   </div>
@@ -177,11 +177,21 @@
 
 <section class="testimonial">
   <div class="container container-fluid">
+      <div class="conent">
+        <div class="card">
+             <div class="card-content">
+              <div class="image">
+                  <img src="Assets/img/man1.png" alt="customer review" srcset="">  
+              </div>
+             </div>
+        </div>
+      </div>
       <h1>Testimonials</h1>
       <p class="text-center">what to expect as our valued customers  </p>
       <div class="row">
           <div class="col-md-4 text-center">
               <div class="profile">
+
                 <img src="Assets/img/man1.png" alt="User 1">
                 <blockquote>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
